@@ -8,26 +8,18 @@ import static org.testng.Assert.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.RandomAccessFile;
-import java.net.URISyntaxException;
-import java.nio.ByteBuffer;
-import java.nio.channels.FileChannel;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.NoSuchAlgorithmException;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.apache.commons.io.FileUtils;
-import org.jdom2.JDOMException;
-import org.mockserver.client.server.MockServerClient;
+import org.mockserver.client.MockServerClient;
 import org.mockserver.integration.ClientAndServer;
 import org.mockserver.model.HttpRequest;
 import org.mockserver.model.HttpResponse;
@@ -56,11 +48,9 @@ public class SyndicationClientTest {
 
     private SyndicationClient testClient;
     private ClientAndServer mockServer;
-    private MockServerClient mockServerClient;
 
-    @Test(priority = 1, groups = "downloading", description = "Tests that the client accurately downloads all files in a single category", enabled = true)
-    public void downloadsAllFilesInCategory() throws URISyntaxException, IOException, NoSuchAlgorithmException,
-            JDOMException, HashValidationFailureException {
+  @Test(priority = 1, groups = "downloading", description = "Tests that the client accurately downloads all files in a single category")
+    public void downloadsAllFilesInCategory() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         Map<String, List<DownloadResult>> result = testClient.download(false, SCT_RF2_BLUE_CATEGORY);
 
@@ -84,13 +74,12 @@ public class SyndicationClientTest {
         assertTrue(filesInClientFolder.contains("blue2.r2"), "blue2.r2 file should be in the download directory");
     }
 
-    @Test(priority = 2, groups = "downloading", description = "Tests that the client accurately downloads the latest file in a single category", enabled = true)
-    public void downloadsLatestInCategory() throws IOException, URISyntaxException, NoSuchAlgorithmException,
-            JDOMException, HashValidationFailureException {
+    @Test(priority = 2, groups = "downloading", description = "Tests that the client accurately downloads the latest file in a single category")
+    public void downloadsLatestInCategory() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         DownloadResult result = testClient.downloadLatest(SCT_RF2_PURPLE_CATEGORY);
-        assertTrue(result.getFile().getName().equals("purple2.r2"),
-                "only purple2.r2 should be reported by the client as downloaded");
+        assertEquals(result.getFile().getName(), "purple2.r2",
+          "only purple2.r2 should be reported by the client as downloaded");
 
         List<String> filesInClientFolder = getFilenamesInDownloadsDirectory();
         assertEquals(filesInClientFolder.size(), 1,
@@ -98,11 +87,14 @@ public class SyndicationClientTest {
         assertTrue(filesInClientFolder.contains("purple2.r2"), "purple2.r2 file should be in the download directory");
     }
 
-    @Test(priority = 3, groups = "downloading", description = "Tests that the client doesn't re-download an existing file", enabled = true)
-    public void doNotReDownloadExistingFile() throws IOException, URISyntaxException, NoSuchAlgorithmException,
-            JDOMException, HashValidationFailureException {
+    @Test(priority = 3, groups = "downloading", description = "Tests that the client doesn't re-download an existing file")
+    public void doNotReDownloadExistingFile() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         DownloadResult result = testClient.downloadLatest(SCT_RF2_PURPLE_CATEGORY);
+
+        assertTrue(result.isFreshlyDownloaded(),
+            "the client should report that the file was freshly downloaded first time around");
+
         result = testClient.downloadLatest(SCT_RF2_PURPLE_CATEGORY);
 
         assertFalse(result.isFreshlyDownloaded(),
@@ -110,34 +102,33 @@ public class SyndicationClientTest {
 
     }
 
-    @Test(priority = 4, groups = "downloading", description = "Tests that the client redownloads if the file already exists, but has a different hash", enabled = true)
-    public void redownloadIfExistingFileIsDifferent() throws IOException, URISyntaxException, NoSuchAlgorithmException,
-            JDOMException, HashValidationFailureException {
+    @Test(priority = 4, groups = "downloading", description = "Tests that the client redownloads if the file already exists, but has a different hash")
+    public void redownloadIfExistingFileIsDifferent() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
 
-        Files.write(Paths.get(outDir + "/purple2.r2"), Arrays.asList("dummy file"), Charset.forName("UTF-8"));
+        Path path = Paths.get(outDir + "/purple2.r2");
+        Files.write(path, List.of("dummy file"), StandardCharsets.UTF_8);
 
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         DownloadResult result = testClient.downloadLatest(SCT_RF2_PURPLE_CATEGORY);
 
         assertTrue(result.isFreshlyDownloaded(), "the client should report that the file was freshly download");
 
-        List<String> lines = Files.readAllLines(Paths.get(outDir + "/purple2.r2"));
-        assertNotEquals(lines.get(0), "dummy file", "the file should be different from the dummy file created");
+        List<String> lines = Files.readAllLines(path);
+        assertNotEquals(lines.getFirst(), "dummy file", "the file should be different from the dummy file created");
     }
 
-    @Test(priority = 5, groups = "downloading", description = "Tests that the client downloads the latest file in multiple categories", enabled = true)
-    public void downloadsLatestFilesFromMultipleCategories() throws IOException, URISyntaxException,
-            NoSuchAlgorithmException, JDOMException, HashValidationFailureException {
+    @Test(priority = 5, groups = "downloading", description = "Tests that the client downloads the latest file in multiple categories")
+    public void downloadsLatestFilesFromMultipleCategories() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         Map<String, List<DownloadResult>> result = testClient.download(true, SCT_RF2_PURPLE_CATEGORY,
                 SCT_RF2_RED_CATEGORY, SCT_RF2_BLUE_CATEGORY);
 
         assertEquals(result.keySet().size(), 3, "response from the client should contain 3 catagories");
-        assertTrue(result.keySet().contains(SCT_RF2_PURPLE_CATEGORY),
+        assertTrue(result.containsKey(SCT_RF2_PURPLE_CATEGORY),
                 "response from the client should contain the purple catagory");
-        assertTrue(result.keySet().contains(SCT_RF2_RED_CATEGORY),
+        assertTrue(result.containsKey(SCT_RF2_RED_CATEGORY),
                 "response from the client should contain the red catagory");
-        assertTrue(result.keySet().contains(SCT_RF2_BLUE_CATEGORY),
+        assertTrue(result.containsKey(SCT_RF2_BLUE_CATEGORY),
                 "response from the client should contain the blue catagory");
 
         // test the purple category
@@ -166,35 +157,33 @@ public class SyndicationClientTest {
         assertTrue(filesInClientFolder.contains("blue1.r2"), "blue1.r2 file should be in the download directory");
     }
 
-    @Test(priority = 6, groups = "downloading", description = "Tests that the HashVaildationFailureException is thrown when the file on the server mismatches the hash in syndication", enabled = true, expectedExceptions = HashValidationFailureException.class)
-    public void hashMismatchInSyndicationThrowsException() throws IOException, URISyntaxException,
-            NoSuchAlgorithmException, JDOMException, HashValidationFailureException {
+    @Test(priority = 6, groups = "downloading", description = "Tests that the HashVaildationFailureException is thrown when the file on the server mismatches the hash in syndication", expectedExceptions = HashValidationFailureException.class)
+    public void hashMismatchInSyndicationThrowsException() throws IOException,
+            NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         testClient.downloadLatest("SCT_RF2_GREEN");
         // expect HashValidationFailureException using TestNG annotation
     }
 
-    @Test(priority = 7, groups = "downloading", description = "Tests that a RuntimeException is thrown when provided with a non-existent category", enabled = true, expectedExceptions = RuntimeException.class)
-    public void nonExistentCategoryThrowsException() throws IOException, URISyntaxException, NoSuchAlgorithmException,
-            JDOMException, HashValidationFailureException {
+    @Test(priority = 7, groups = "downloading", description = "Tests that a RuntimeException is thrown when provided with a non-existent category", expectedExceptions = RuntimeException.class)
+    public void nonExistentCategoryThrowsException() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         testClient.downloadLatest("SCT_RF2_YELLOW");
         // expect HashValidationFailureException using TestNG annotation
     }
 
-    @Test(priority = 8, groups = "downloading", enabled = true)
-    public void downloadsAllFilesFromMultipleCategories() throws IOException, URISyntaxException,
-            NoSuchAlgorithmException, JDOMException, HashValidationFailureException {
+    @Test(priority = 8, groups = "downloading")
+    public void downloadsAllFilesFromMultipleCategories() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, tokenURL, outDir, clientID, secret);
         Map<String, List<DownloadResult>> result = testClient.download(false, SCT_RF2_PURPLE_CATEGORY,
                 SCT_RF2_RED_CATEGORY, SCT_RF2_BLUE_CATEGORY);
 
         assertEquals(result.keySet().size(), 3, "response from the client should contain 3 catagories");
-        assertTrue(result.keySet().contains(SCT_RF2_PURPLE_CATEGORY),
+        assertTrue(result.containsKey(SCT_RF2_PURPLE_CATEGORY),
                 "response from the client should contain the purple catagory");
-        assertTrue(result.keySet().contains(SCT_RF2_RED_CATEGORY),
+        assertTrue(result.containsKey(SCT_RF2_RED_CATEGORY),
                 "response from the client should contain the red catagory");
-        assertTrue(result.keySet().contains(SCT_RF2_BLUE_CATEGORY),
+        assertTrue(result.containsKey(SCT_RF2_BLUE_CATEGORY),
                 "response from the client should contain the blue catagory");
 
         // test the purple category
@@ -229,9 +218,8 @@ public class SyndicationClientTest {
         assertTrue(filesInClientFolder.contains("blue2.r2"), "blue2.r2 file should be in the download directory");
     }
 
-    @Test(priority = 10, groups = "authentication", description = "Tests that Authentication Exception is thrown when token can not be obtained", enabled = true, expectedExceptions = AuthenticationException.class)
-    public void cannotGetTokenException() throws IOException, URISyntaxException, NoSuchAlgorithmException,
-            JDOMException, HashValidationFailureException {
+    @Test(priority = 10, groups = "authentication", description = "Tests that Authentication Exception is thrown when token can not be obtained", expectedExceptions = AuthenticationException.class)
+    public void cannotGetTokenException() throws IOException, NoSuchAlgorithmException, HashValidationFailureException {
         testClient = new SyndicationClient(feedURL, "http://doesn't-work.com", outDir, clientID, secret);
         testClient.downloadLatest("SCT_RF2_BLUE");
         // expect IOException using TestNG annotation
@@ -242,10 +230,11 @@ public class SyndicationClientTest {
         outDir.mkdirs();
         // Begin mock server and request handler
         mockServer = startClientAndServer(1080);
-        mockServerClient = new MockServerClient("localhost", 1080);
+
+        MockServerClient mockServerClient = new MockServerClient("localhost", 1080);
 
         // Put provided server files in memory
-        HashMap<String, byte[]> serverFileBins = new HashMap<String, byte[]>();
+        HashMap<String, byte[]> serverFileBins = new HashMap<>();
         for (String aFile : serverFileList) {
             Path filePath = new File(serverDir + aFile).toPath();
             serverFileBins.put(aFile, Files.readAllBytes(filePath));
@@ -279,6 +268,7 @@ public class SyndicationClientTest {
     @AfterClass
     public void tearDownMockServer() {
         mockServer.stop();
+        mockServer.close();
     }
 
     /**
@@ -286,12 +276,11 @@ public class SyndicationClientTest {
      * syndication client under test is downloading to
      * 
      * @return List<String> filenames portion of the files in the output directory
-     * @throws IOException
+     * @throws IOException if an IO error occurs
      */
     private List<String> getFilenamesInDownloadsDirectory() throws IOException {
-        List<String> filesInClientFolder = Files.list(outDir.toPath()).map(file -> file.getFileName().toString())
+      return Files.list(outDir.toPath()).map(file -> file.getFileName().toString())
                 .collect(Collectors.toList());
-        return filesInClientFolder;
     }
 
     /**
